<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/features"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_movie"
            android:checked="true"
            android:icon="@drawable/vector_drawer_movie"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_tvseries"
            android:icon="@drawable/vector_drawer_tv"
            android:title="@string/nav_tv_series" />

        <item
            android:id="@+id/nav_celebrity"
            android:icon="@drawable/vector_drawer_celebrity"
            android:title="@string/nav_celebrities" />

        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/vector_drawer_game"
            android:title="@string/nav_fun_quiz" />

    </group>

    <group android:id="@+id/communication">
        <item android:title="@string/nav_communicate">
            <menu>
                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/vector_drawer_thumbs"
                    android:title="@string/nav_support_developers" />

                <item
                    android:id="@+id/nav_share_app"
                    android:icon="@drawable/vector_menu_share"
                    android:title="@string/nav_share_this_app" />

                <item
                    android:id="@+id/nav_rate_app"
                    android:icon="@drawable/vector_drawer_rating"
                    android:title="@string/nav_rate_this_app" />

            </menu>
        </item>
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/vector_drawer_logout"
        android:title="@string/nav_logout" />

</menu>
