<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appListBackgroundColor"
    android:fitsSystemWindows="true"
    tools:context=".celebrity.celebritydetails.CelebrityDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/networkImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@android:color/white"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/backdrop_def_image"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appListBackgroundColor"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:padding="12dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/rootLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardUseCompatPadding="true"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="vertical">

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        style="@style/movieTVDetailsHeading"
                        android:text="@string/detail_title_name"
                        app:fontType="bold" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        android:id="@+id/textViewCelebrityName"
                        style="@style/movieTVDetailsHeadingValue"
                        android:text="@string/string_loading"
                        app:fontType="medium" />

                    <include layout="@layout/app_divider" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        style="@style/movieTVDetailsHeading"
                        android:text="@string/detail_title_biography"
                        app:fontType="bold" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        android:id="@+id/textViewCelebrityBiography"
                        style="@style/movieTVDetailsHeadingValue"
                        android:layout_gravity="fill"
                        android:text="@string/string_loading"
                        app:fontType="medium" />

                    <include layout="@layout/app_divider" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        style="@style/movieTVDetailsHeading"
                        android:text="@string/detail_title_credits"
                        app:fontType="bold" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        android:id="@+id/textViewCredits"
                        style="@style/movieTVDetailsHeadingValue"
                        android:layout_gravity="fill"
                        android:text="@string/string_loading"
                        app:fontType="medium" />

                    <include layout="@layout/app_divider" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        style="@style/movieTVDetailsHeading"
                        android:text="@string/detail_title_birthplace"
                        app:fontType="bold" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        android:id="@+id/textViewBirthplace"
                        style="@style/movieTVDetailsHeadingValue"
                        android:text="@string/string_loading"
                        app:fontType="medium" />

                    <LinearLayout
                        android:id="@+id/alsoKnownAs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <include layout="@layout/app_divider" />

                        <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                            style="@style/movieTVDetailsHeading"
                            android:text="@string/detail_title_also_known_as"
                            app:fontType="bold" />

                        <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                            android:id="@+id/textViewAlias"
                            style="@style/movieTVDetailsHeadingValue"
                            android:text="@string/string_loading"
                            app:fontType="medium" />
                    </LinearLayout>

                    <include layout="@layout/app_divider" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        style="@style/movieTVDetailsHeading"
                        android:text="@string/detail_title_date_of_birth"
                        app:fontType="bold" />

                    <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                        android:id="@+id/textViewBirthday"
                        style="@style/movieTVDetailsHeadingValue"
                        android:text="@string/string_loading"
                        app:fontType="medium" />

                    <LinearLayout
                        android:id="@+id/dateOfDeath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <include layout="@layout/app_divider" />

                        <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                            style="@style/movieTVDetailsHeading"
                            android:text="@string/detail_title_date_of_death"
                            app:fontType="bold" />

                        <com.adithyaupadhya.uimodule.applicationfont.RobotoTextView
                            android:id="@+id/textViewDod"
                            style="@style/movieTVDetailsHeadingValue"
                            app:fontType="medium" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <com.adithyaupadhya.uimodule.applicationfont.RobotoButton
                android:id="@+id/share_button"
                style="@style/shareButtonStyle"
                android:visibility="gone"
                app:fontType="bold" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/vector_favorite"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
